# FeverCodeChallenge

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  conftest.py  main.py  test_main.py
app/adapters/: dependencies.py  test_dependencies.py  test_update_events.py  update_events.py
app/adapters/http/events/: router.py  test_router.py
app/application/dtos/: events.py
app/application/mappers/: events.py  test_events.py
app/application/use_cases/: request_events.py  test_request_events.py  test_update_providers.py  update_events.py
app/domain/entities/: event.py
app/domain/entities/provider_a/: provider_a.py  test_provider_a.py
app/domain/services/: provider_a.py  test_event_service.py
app/infrastructure/: arq_worker.py  database.py  scheduler.py
app/infrastructure/api/external_providers/: base.py  provider_a.py  test_provider_a.py
app/infrastructure/config/local_docker/: config.yaml
app/infrastructure/repository/: base.py  entities.py  provider_a.py  test_provider_a.py
doc/adr/: 0001-record-architecture-decisions.md  0002-add-select-api-documentation.md  0003-python-runnable-selection.md  0004-package-manager-selection.md  0005-web-framework-selection.md  0006-persistency-data-layer-selection.md  0007-cicd-selection.md  0008-testing-framework-selection.md  0009-web-server-selection.md  0010-architecture-design-pattern-selection.md  0011-updating-events-trigger.md  0012-stored-datatype-in-redis.md
docker/: docker-compose.yml
docker/mock-event-service/: Dockerfile  app.py
(+1 files in other folders)
